--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mysql-connector-python==9.2.0
 pydantic==2.11.2
 pydantic_core==2.33.1
 Pygments==2.19.1
